<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_blog"
        android:textSize="60sp"
        android:fontFamily="@font/dash"
        android:textColor="@color/colorGrey"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/txt_LayoutEmailRegistro"
        android:layout_marginTop="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_emailRegistro"
            android:hint="@string/hint_email"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:background="@color/colorWhite"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_LayoutPasswordRegistro"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:id="@+id/txt_passwordRegistro"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@color/colorWhite"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_LayoutConfirmPassword"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm"
            android:id="@+id/txt_Confirmpassword"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@color/colorWhite"
            />

    </com.google.android.material.textfield.TextInputLayout>






    <Button
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:id="@+id/btn_registro"
        android:text="@string/registrarse"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_paraIniciarSesion"
            android:layout_marginRight="6dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciarSesion"
            android:layout_marginRight="6dp"
            android:id="@+id/txt_iniciarSesion"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>







</LinearLayout>